# Booster-Syndrome

./: .dockerignore  .editorconfig  .env.development  .env.example  .env.production  .eslintrc.json  .gitignore  .rubocop.yml  CMakeLists.txt  CONTRIBUTING.md  Cargo.toml  Dockerfile  Gemfile  LICENSE  Makefile  README.md  build.gradle  docker-compose.dev.yml  docker-compose.yml  go.mod  package.json  pom.xml  pyproject.toml  pytest.ini  requirements.txt  setup.py
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: cd-pipeline.yml  ci.yml  deploy.yml  go.yml  python.yml  ruby.yml  rust.yml  test.yml
analytics/: processor.jl  statistics.R
api/: schema.graphql  swagger.yaml
api/graphql/: resolvers.ts
blockchain/: smart_contract.sol
config/: app.config.ts  database.config.ts
database/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_roles_permissions.sql  004_create_events.sql  005_create_organizations.sql  006_create_notifications.sql
database/schemas/: analytics_schema.sql  users_schema.sql
db/migrations/: 001_create_users.sql  002_create_sessions.sql  003_create_api_keys.sql  004_create_posts.sql  005_create_comments.sql
docs/: API.md  API_REFERENCE.md  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  FAQ.md  PERFORMANCE.md  ROADMAP.md  SECURITY.md  TESTING.md  TROUBLESHOOTING.md
etl/: data_pipeline.py
infrastructure/ansible/: deploy.yml
infrastructure/docker/: Dockerfile.analytics  Dockerfile.auth  Dockerfile.frontend  Dockerfile.gateway  nginx-custom.conf  nginx.conf
infrastructure/kubernetes/: configmap.yaml  deployment.yaml  hpa-config.yaml  hpa.yaml  ingress.yaml  namespace.yaml  network-policy.yaml  secrets.yaml  service-monitor.yaml  service.yaml
infrastructure/monitoring/: alertmanager.yml  grafana-dashboard.json  grafana-dashboards.json  prometheus-config.yml  prometheus.yml
infrastructure/terraform/: backend.tf  loadbalancer.tf  main.tf  outputs.tf  variables.tf
ml/: model_training.py
mobile/android/: ApiService.kt  ViewModels.kt
mobile/flutter/: api_client.dart  api_service.dart
mobile/ios/: NetworkManager.swift
mobile/kotlin/: HttpClient.kt
mobile/swift/: NetworkClient.swift
proto/: events.proto
scripts/: backup.sh  clean.sh  cluster-setup.sh  db_migrate.sh  db_seed.sh  deploy.sh  health-check.sh  lint.sh  monitor.pl  performance-test.sh  seed.ts  setup.sh  test-all.sh  test.sh
scripts/benchmarks/: benchmark.sh  load-test.js
scripts/deploy/: deploy.sh
scripts/migrations/: 001_create_users_table.sql  002_create_sessions_table.sql  003_create_events_table.sql  004_create_notifications_table.sql
scripts/setup/: install.sh
scripts/utilities/: check-ports.sh  clean.sh  generate-docs.sh  update-deps.sh
services/ab-testing/: experiment.ts
services/activity/: activity_feed.ts
services/ai/: openai_service.ts
services/algorithms/: search.c
services/analytics-service/: .env.example  README.md  main.py  (+1 more)
services/auth-service/: .env.example  Cargo.toml  README.md
services/auth-service/migrations/: 001_create_users.sql  001_create_users_table.sql  002_create_sessions.sql  002_create_sessions_table.sql  003_create_password_resets_table.sql
services/auth-service/src/: main.rs
services/auth-service/src/handlers/: auth.rs
services/auth-service/src/middleware/: cors.rs  logging.rs  mod.rs  rate_limit.rs
services/auth-service/src/models/: mod.rs  session.rs  token.rs  user.rs
services/auth-service/src/services/: auth_service.rs  mod.rs  password_service.rs  token_service.rs
services/auth-service/src/utils/: crypto.rs  error.rs  response.rs  validation.rs
services/auth-service/tests/: auth_tests.rs  integration_test.rs  mod.rs
services/file-service/: .env.example  Cargo.toml  README.md
services/file-service/src/: config.rs  handlers.rs  main.rs  models.rs  storage.rs
services/file-service/src/handlers/: upload.rs
tests/: load-test.js
utils/: crypto.ts  formatters.ts  validators.ts
wasm/: processor.wat
(+522 files in other folders)
