[package]
name = "auth-service"
version = "1.0.0"
edition = "2021"
authors = ["ikaydreams108@gmail.com"]

[dependencies]
tokio = { version = "1.35", features = ["full"] }
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres", "uuid", "chrono"] }
bcrypt = "0.15"
jsonwebtoken = "9.2"
uuid = { version = "1.6", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
tracing = "0.1"
tracing-subscriber = "0.3"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }
anyhow = "1.0"
thiserror = "1.0"
validator = { version = "0.16", features = ["derive"] }
async-trait = "0.1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
